2013-01-31  Gavin SALAM  <gavin.salam@cern.ch> + Matteo + Gregory

	* scripts/internal/Template/example.ref *** ADDED ***
	added a template reference output file for make check with
	instruction on what to do with it.

	* scripts/new-contrib-template.sh -> scripts/new-contrib-from-template.sh
	a more meaningful name.

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/check.sh:
	default extension for expected output set to "ref"

	* scripts/internal/Template/example.cc:
	added missing header

	* scripts/internal/Template/Makefile
	* scripts/internal/check.sh:
	fixed some bash typos

	* scripts/switch-to-version.sh:           *** DELETED ***
	* scripts/internal/switch-to-version.sh:   *** ADDED ***
	* scripts/update-contribs.sh:
	moved switch-to version in internal/

	* scripts/new-contrib-template.sh:   *** ADDED ***
	* scripts/internal/Template:         *** ADDED ***
	added a template to create a new contrib and is associated script

	* scripts/TODO:
	updated to reflect altest changes

2013-01-30  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/switch-to-version.sh:
	* scripts/update-contribs.sh:
	if the versions agree, still run svn up

	* scripts/internal/common.sh:
	make sure the full contrib name is specified

	* scripts/update-contribs.sh:
	when updating a specified contrib, ask for confirmation

	* scripts/switch-to-version.sh:
	  - use svn switch --relocate since svn relocate is not available
	    with old svn version
	  - give a write access when checking out the trunk

	* scripts/make-release.sh:
	gave access to check_pending_modifications

	* data/                *** ADDED ***
	added common event files for make check purpose

	* configure:           *** ADDED ***
	* Makefile.in:         *** ADDED ***
	added basic building mechanism

	* scripts/update-contribs.sh:
	allowed to run it with a contrib name and optional version
	This is then equivalent to calling switch-to-version.sh

	* scripts/update-contribs.sh: