@@ -1,3 +1,9 @@
+2013-01-31  Gregory Soyez  <soyez@fastjet.fr>
+
+	* scripts/internal/check.sh:
+	checked that the expected output contains more than comments and
+	empty lines
+
 2013-01-31  Gavin SALAM  <gavin.salam@cern.ch> + Matteo + Gregory
 
 	* scripts/internal/Template/example.ref *** ADDED ***
